# zoompy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  _openapi_contract.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
badges/: coverage.json
docs/: index.md
docs/guides/: getting-started.md  logging-and-runtime.md  sdk-guide.md  validation-and-schemas.md
scripts/: build_docs.py  list_users.py  sync_schemas.py  write_coverage_badge.py
src/tests/: _path_schema_suite.py  conftest.py  test_accounts.py  test_ai_companion.py  test_auth.py  test_auto_dialer.py  test_client_retries.py  test_clips.py  test_cobrowse_sdk.py  test_commerce.py  test_config.py  test_contact_center.py  test_endpoints.py  test_events.py  test_logging.py  test_marketplace.py  test_master_accounts.py  test_meetings.py  test_number_management.py  test_packaged_resources.py  test_qss.py  test_revenue_accelerator.py  test_runtime_schema.py  test_runtime_webhooks.py  test_schema_helpers.py  test_scim.py  test_sdk.py  test_sdk_internals.py  test_sdk_real_schemas.py  test_tasks.py  test_video_sdk.py  test_webhooks.py
src/tests/endpoints/accounts/: Accounts.json  SCIM2.json  Users.json
src/tests/endpoints/build_platform/: Cobrowse SDK.json
src/tests/endpoints/business_services/: Commerce.json  Number Management.json  Workforce Management.json
src/tests/endpoints/marketplace/: Marketplace.json
src/tests/endpoints/workplace/: AI Companion.json  Calendar.json  Clips.json  Conference Room Connector.json  Meetings.json  Phone.json  Rooms.json  Scheduler.json  Tasks.json  Team Chat.json  Whiteboard.json  Zoom Docs.json
src/tests/golden/: sdk_public_surface.json
src/tests/integration/: test_integration_smoke.py
src/tests/master_accounts/accounts/: QSS.json  Users.json
src/tests/master_accounts/build_platform/: Video SDK.json
src/tests/master_accounts/business_services/: Contact Center.json
src/tests/master_accounts/marketplace/: Marketplace.json
src/tests/master_accounts/workplace/: Conference Room Connector.json  Rooms.json
src/zoom_sdk/: sdk.py
src/zoompy/: __init__.py  auth.py  client.py  config.py  logging.py  schema.py  sdk.py
src/zoompy/endpoints/accounts/: QSS.json
src/zoompy/endpoints/build_platform/: Video SDK.json
src/zoompy/endpoints/business_services/: Auto Dialer.json  Contact Center.json  Events.json  Healthcare.json  Virtual Agent.json  (+2 more)
(+37 files in other folders)
