[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "zoom-sdk-python"
version = "1.0.1"
description = "A production-ready unified Zoom API client with schema validation."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GNU AGPL v3" }
authors = [{ name = "herooftimeandspace" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pdoc>=15.0.0",
  "mkdocs-material>=9.7.5",
]

[tool.hatch.build]
include = [
  "src/zoom_sdk/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zoom_sdk"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"
markers = [
  "integration: marks tests that require live Zoom credentials",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
